refactor(client): 优化main.cpp代码结构和输入处理
- 调整头文件顺序，提升代码可读性
- 添加输入验证，防止非整数输入导致程序异常
- 优化命令处理逻辑，支持无参数命令的执行

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,6 @@
         "tuple": "cpp",
         "typeinfo": "cpp"
     },
-    "cmake.sourceDirectory": "/home/gao/code/chatserver",
+    "cmake.sourceDirectory": "/root/Code/chatserver",
     "cmake.configureOnEdit": false
 }
